Fixed alignment issue on tabs

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -155,7 +155,7 @@ nav{
     margin-left: auto;
     margin-right: auto;
     .nav{
-        padding-left: 2.2rem !important;
+        padding-left: 6rem !important;
         width: 100%;
         overflow-x: scroll;
         flex-wrap: nowrap !important;
